tests/baselines/reference/multipleStringIndexers.errors.txt
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(4,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(5,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(9,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(10,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(14,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(15,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(19,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(20,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(24,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(25,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(29,5): error TS2374: Duplicate index signature for type 'string'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts(30,5): error TS2374: Duplicate index signature for type 'string'.


==== tests/cases/conformance/types/objectTypeLiteral/indexSignatures/multipleStringIndexers.ts (12 errors) ====
    // Multiple indexers of the same type are an error
    
    class C {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    interface I {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    var a: {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    var b: {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    } = { y: '' }
    
    class C2<T> {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    interface I2<T> {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }